# Graph-Drawing

./: .gitignore  .gitmodules  CMakeLists.txt  CppProperties.json  README.md  bibtex.bib  proof_obvs.txt  report.bbl  report.bcf  report.blg  report.run.xml  report.tex  tesseract.csv  tree_prototype.xlsx
lib/glib-core/: bd.cpp  dt.h  ssmp.cpp
lib/glpk/examples/threads/: thread.h
lib/snap-core/: anf.h  bfsdfs.h  centr.cpp  cmty.cpp  gbase.cpp  gbase.h  ggen.cpp  ggen.h  gio.h  graph.h  gsvd.cpp  gsvd.h  subgraph.cpp  subgraph.h  table.cpp  triad.h
report/: aes6_20.pdf_tex  figure2.pdf_tex  figure2_contours.pdf_tex  figure2_threads.pdf_tex  full_tree.pdf_tex  k8_trace.pdf_tex  no_aes6_20.pdf_tex  perfect_tree_0.pdf_tex  petersen.pdf_tex  planarity_cx1.pdf_tex  planarity_cx2.pdf_tex  planarity_cx3.pdf_tex  prism_10.pdf_tex  prism_20.pdf_tex  prism_4.pdf_tex  prism_40.pdf_tex  prism_5.pdf_tex  prism_6.pdf_tex  prism_7.pdf_tex  prism_8.pdf_tex  prism_9.pdf_tex  tree_2.pdf_tex
src/: README.md  animate_barycenter.cpp  animate_spring.cpp  barycenter_prism.cpp  bst.hpp  demo-TNEANet.cpp  eades84.cpp  force_directed.h  graphs.cpp  graphs.h  layout.cpp  main.cpp  tree.cpp  tree.h  tree_draw.cpp  tree_lp.cpp  tree_lp.h  tree_main.cpp  tree_paper.cpp
tests/: tree_tests.cpp
